--- a/FoxSDC_MGMT/Properties/Resources.resx
+++ b/FoxSDC_MGMT/Properties/Resources.resx
@@ -211,4 +211,13 @@
   <data name="fromtosrv" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\fromtosrv.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Run" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Run.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ST" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ST.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="MSTSC" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\MSTSC.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
 </root>
